[tool.poetry]
name = "credit-liquidity-monitor"
version = "0.1.0"
description = ""
authors = ["Moses McCall <mosesmc52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fredapi = "^0.5.2"
python-dotenv = "^1.2.2"
boto3 = "^1.42.70"
pandas = "^3.0.1"
matplotlib = "^3.10.8"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
