[tool.poetry]
name = "credit-liquidity-monitor"
version = "0.1.0"
description = ""
authors = ["Moses McCall <mosesmc52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fredapi = "^0.5.2"
python-dotenv = "^1.2.2"
boto3 = "^1.42.70"
pandas = "^3.0.1"
matplotlib = "^3.10.8"
requests = "^2.32.5"
scipy = "^1.17.1"
pytensor = "2.31.7"
pymc = "5.25.1"
ipywidgets = "^8.1.8"
scikit-learn = "^1.8.0"
arviz = "0.23.1"
setuptools = "^82.0.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.5.6"
yfinance = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
